# esp32s3-for-lvgl

components/lv_testfile/: CMakeLists.txt
components/lv_testfile/include/: lv_demo_testfile.h
components/lv_testfile/src/: lv_demo_testfile.c
components/lvgl/demos/benchmark/: lv_demo_benchmark.h  lv_demo_benchmark_copy.c  lv_demo_benchmark_copy.h
components/lvgl_esp32_drivers/: gpio.h  i2c.h  lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h  spi_master.h
components/lvgl_esp32_drivers/lvgl_tft/: disp_spi.c  disp_spi.h  ili9341.c  st7789.c
components/lvgl_esp32_drivers/lvgl_touch/: tp_spi.c  tp_spi.h  xpt2046.c
main/: CMakeLists.txt  main.c
